Button Style Fix, H2 Margin Reset, Section Content Gap

--- a/src/styles/components/button.sass
+++ b/src/styles/components/button.sass
@@ -1,5 +1,6 @@
 .button
 	display: flex
+	width: fit-content
 	padding: 10px 22px
 	border-radius: 3rem
 	border: 2px solid $accent
