--- a/src/styles/layouts/section.sass
+++ b/src/styles/layouts/section.sass
@@ -15,5 +15,6 @@ section
 			display: flex
 			flex-direction: column
 			place-content: center
+			gap: 2rem
 			max-width: map.get($containers-max-widths, 'content')
 			width: 100%
