--- a/src/styles/reset.sass
+++ b/src/styles/reset.sass
@@ -3,6 +3,7 @@ body
 	padding: unset
 
 h1,
+h2,
 p
 	margin: unset
 
